// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification center Should not display notification when component is not defined 1`] = `""`;

exports[`Notification center defined custom elements mg-alert Should display a notification {
  content: 'Success variant without delay',
  variant: 'success',
  delay: 0
} 1`] = `
<div id="mg-notification-center"
     class="notification-center"
>
  <mg-alert class="notification-center__notification"
            close-button
            variant="success"
  >
    Success variant without delay
  </mg-alert>
</div>
`;

exports[`Notification center defined custom elements mg-alert Should display a notification { content: 'Danger variant', variant: 'danger' } 1`] = `
<div id="mg-notification-center"
     class="notification-center"
>
  <mg-alert class="notification-center__notification"
            close-button
            variant="danger"
  >
    Danger variant
  </mg-alert>
</div>
`;

exports[`Notification center defined custom elements mg-alert Should display a notification { content: 'Default example' } 1`] = `
<div id="mg-notification-center"
     class="notification-center"
>
  <mg-alert class="notification-center__notification"
            close-button
  >
    Default example
  </mg-alert>
</div>
`;

exports[`Notification center defined custom elements mg-alert Should display a notification { content: 'Success variant', variant: 'success' } 1`] = `
<div id="mg-notification-center"
     class="notification-center"
>
  <mg-alert class="notification-center__notification"
            close-button
            variant="success"
            delay="5"
  >
    Success variant
  </mg-alert>
</div>
`;

exports[`Notification center defined custom elements mg-alert Should display a notification { content: 'Warning variant', variant: 'warning' } 1`] = `
<div id="mg-notification-center"
     class="notification-center"
>
  <mg-alert class="notification-center__notification"
            close-button
            variant="warning"
  >
    Warning variant
  </mg-alert>
</div>
`;

exports[`Notification center defined custom elements mg-alert Should display a notification { content: 'With context', context: 'blu' } 1`] = `
<div id="mg-notification-center"
     class="notification-center"
>
  <mg-alert class="notification-center__notification"
            close-button
            data-notification-context="blu"
  >
    With context
  </mg-alert>
</div>
`;

exports[`Notification center defined custom elements mg-alert Should display a notification { content: 'With delay', delay: 5 } 1`] = `
<div id="mg-notification-center"
     class="notification-center"
>
  <mg-alert class="notification-center__notification"
            close-button
            delay="5"
  >
    With delay
  </mg-alert>
</div>
`;

exports[`Notification center defined custom elements mg-alert Should remove message on close 1`] = `
<div id="mg-notification-center"
     class="notification-center"
>
  <mg-alert class="notification-center__notification"
            close-button
  >
    Message to close
  </mg-alert>
</div>
`;

exports[`Notification center defined custom elements mg-alert Should remove message on close 2`] = `
<div id="mg-notification-center"
     class="notification-center"
>
</div>
`;

exports[`Notification center defined custom elements mg-alert Should remove previous message with same context 1`] = `
<div id="mg-notification-center"
     class="notification-center"
>
  <mg-alert class="notification-center__notification"
            close-button
            data-notification-context="blu"
  >
    First message with context
  </mg-alert>
</div>
`;

exports[`Notification center defined custom elements mg-alert Should remove previous message with same context 2`] = `
<div id="mg-notification-center"
     class="notification-center"
>
  <mg-alert class="notification-center__notification"
            close-button
            data-notification-context="blu"
  >
    Second message with same context
  </mg-alert>
</div>
`;

exports[`Notification center defined custom elements mg-alert Should remove unsafe or unknown html 1`] = `
<div id="mg-notification-center"
     class="notification-center"
>
  <mg-alert class="notification-center__notification"
            close-button
  >
    <p>
      Content with unsafe or unknown html
    </p>
  </mg-alert>
</div>
`;

exports[`Notification center defined custom elements mg-message Should display a notification {
  content: 'Success variant without delay',
  variant: 'success',
  delay: 0
} 1`] = `
<div id="mg-notification-center"
     class="notification-center"
>
  <mg-message class="notification-center__notification"
              close-button
              variant="success"
  >
    Success variant without delay
  </mg-message>
</div>
`;

exports[`Notification center defined custom elements mg-message Should display a notification { content: 'Danger variant', variant: 'danger' } 1`] = `
<div id="mg-notification-center"
     class="notification-center"
>
  <mg-message class="notification-center__notification"
              close-button
              variant="danger"
  >
    Danger variant
  </mg-message>
</div>
`;

exports[`Notification center defined custom elements mg-message Should display a notification { content: 'Default example' } 1`] = `
<div id="mg-notification-center"
     class="notification-center"
>
  <mg-message class="notification-center__notification"
              close-button
  >
    Default example
  </mg-message>
</div>
`;

exports[`Notification center defined custom elements mg-message Should display a notification { content: 'Success variant', variant: 'success' } 1`] = `
<div id="mg-notification-center"
     class="notification-center"
>
  <mg-message class="notification-center__notification"
              close-button
              variant="success"
              delay="5"
  >
    Success variant
  </mg-message>
</div>
`;

exports[`Notification center defined custom elements mg-message Should display a notification { content: 'Warning variant', variant: 'warning' } 1`] = `
<div id="mg-notification-center"
     class="notification-center"
>
  <mg-message class="notification-center__notification"
              close-button
              variant="warning"
  >
    Warning variant
  </mg-message>
</div>
`;

exports[`Notification center defined custom elements mg-message Should display a notification { content: 'With context', context: 'blu' } 1`] = `
<div id="mg-notification-center"
     class="notification-center"
>
  <mg-message class="notification-center__notification"
              close-button
              data-notification-context="blu"
  >
    With context
  </mg-message>
</div>
`;

exports[`Notification center defined custom elements mg-message Should display a notification { content: 'With delay', delay: 5 } 1`] = `
<div id="mg-notification-center"
     class="notification-center"
>
  <mg-message class="notification-center__notification"
              close-button
              delay="5"
  >
    With delay
  </mg-message>
</div>
`;

exports[`Notification center defined custom elements mg-message Should remove message on close 1`] = `
<div id="mg-notification-center"
     class="notification-center"
>
  <mg-message class="notification-center__notification"
              close-button
  >
    Message to close
  </mg-message>
</div>
`;

exports[`Notification center defined custom elements mg-message Should remove message on close 2`] = `
<div id="mg-notification-center"
     class="notification-center"
>
</div>
`;

exports[`Notification center defined custom elements mg-message Should remove previous message with same context 1`] = `
<div id="mg-notification-center"
     class="notification-center"
>
  <mg-message class="notification-center__notification"
              close-button
              data-notification-context="blu"
  >
    First message with context
  </mg-message>
</div>
`;

exports[`Notification center defined custom elements mg-message Should remove previous message with same context 2`] = `
<div id="mg-notification-center"
     class="notification-center"
>
  <mg-message class="notification-center__notification"
              close-button
              data-notification-context="blu"
  >
    Second message with same context
  </mg-message>
</div>
`;

exports[`Notification center defined custom elements mg-message Should remove unsafe or unknown html 1`] = `
<div id="mg-notification-center"
     class="notification-center"
>
  <mg-message class="notification-center__notification"
              close-button
  >
    <p>
      Content with unsafe or unknown html
    </p>
  </mg-message>
</div>
`;
